plugins {
  id 'java'
  id 'org.springframework.boot' version '3.2.4'
  id 'io.spring.dependency-management' version '1.1.4'
  id 'org.springdoc.openapi-gradle-plugin' version '1.8.0'
  id 'org.ec4j.editorconfig' version '0.1.0'
}

group = 'com.ssafy'
version = '0.0.1-SNAPSHOT'

java {
  sourceCompatibility = '21'
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
//  implementation 'org.springframework.boot:spring-boot-starter-kafka'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-websocket'
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
  compileOnly 'org.projectlombok:lombok'
  runtimeOnly 'com.h2database:h2'
  runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
  annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
  annotationProcessor 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.security:spring-security-test'

  // https://github.com/querydsl/querydsl
  implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
  annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
  annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
  annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

  // https://github.com/zalando/problem-spring-web
  implementation 'org.zalando:problem-spring-web:0.29.1'
  implementation 'org.zalando:jackson-datatype-problem:0.27.1'

  // https://github.com/jwtk/jjwt
  implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
  runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

  // https://github.com/mapstruct/mapstruct
  implementation 'org.mapstruct:mapstruct:1.5.5.Final'
  annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

  // http://localhost:8080/swagger-ui/index.html
  // https://github.com/springdoc/springdoc-openapi
  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
  // https://springdoc.org/#javadoc-support
  annotationProcessor 'com.github.therapi:therapi-runtime-javadoc-scribe:0.15.0'
  implementation 'com.github.therapi:therapi-runtime-javadoc:0.15.0'

  // https://mvnrepository.com/artifact/software.amazon.awssdk/s3
  implementation 'software.amazon.awssdk:s3:2.+'

  // https://github.com/sashirestela/simple-openai
  implementation('io.github.sashirestela:simple-openai:2.3.2') {
    exclude group: 'org.slf4j', module: 'slf4j-simple'
  }
}

tasks.named('test') {
  useJUnitPlatform()
}

// ./gradlew clean generateOpenApiDocs
tasks {
  forkedSpringBootRun {
    doNotTrackState("See https://github.com/springdoc/springdoc-openapi-gradle-plugin/issues/102")
  }
}
apply plugin: 'java'
